# llmposter

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yaml
.agent/: LLMposter_Project_Roadmap.md  PHASE_0.md  PROJECT_CONTEXT.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: admin.py  agents.py  health.py  rounds.py
backend/app/core/: config.py
backend/app/data/: agents.json  word_bank.json
backend/app/db/: __init__.py  models.py  seed.py  session.py
backend/app/prompts/: __init__.py  clues.py  instruction_clues.py  strategies.json  strategies.py  strategy_loader.py  votes.py
backend/app/services/: agent_config_store.py  agents.py  inference.py  metrics.py  runtime_agents.py  voting.py  word_bank.py
backend/app/services/agents/: agent_config_store.py  clue_generation.py  inference.py  runtime_agents.py  strategy_loader.py
backend/app/services/voting/: __init__.py  features.py  predictor.py  schemas.py  voting.py
backend/app/services/voting/models/svm_rbf_balanced_20260712T172943Z/: model.joblib
backend/tests/: test_admin_metrics.py  test_agents.py  test_db_models.py  test_health.py  test_rounds.py  test_strategy_prompt_techniques.py  test_word_bank.py
backend/tests/services/agents/: test_strategy_loader.py
experiments/: README.md  run_backend.py  run_config_loader.py
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: dev.cmd  fill_word_bank_hint.py  (+2 more)
(+136 files in other folders)
