[project]
name = "llmposter-backend"
version = "0.1.0"
description = "FastAPI backend for the LLMposter MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "joblib>=1.4.0",
    "scikit-learn==1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mlflow>=2.14.0",
    "pyyaml>=6.0.0",
    "wordfreq>=3.1.1",
    "wn>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
